chore: update API contract
